erm... bits n bobs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1>Football App</h1>
 		<p>
-			Stores players, generates evenly matched random teams based on player skill level, and stores player league stats to determine a winning player at the end of the season. <br /><br />
+			Stores players, generates evenly matched random teams based on player skill level, and stores player league stats to determine a winning player at the end of the season. Data is stored in localStorage on the device and can be exported as raw JSON. <br /><br />
 			Beta v0.1.
 		</p>
 
