--- a/index.html
+++ b/index.html
@@ -7,20 +7,55 @@
 		<link rel="stylesheet" href="styles.css" media="screen" title="no title">
 	</head>
 	<body>
+		<div class="dev-tools">
+			<p>
+				Developer Tools
+			</p>
+
+			<div class="gen-test-data hidden">
+				<button onclick="genTestData()" type="button" name="button">Generate Test Players</button>
+			</div>
+
+			<div class="">
+				<button onclick="consoleLogDb()"type="button" name="button">console.log(database)</button>
+			</div>
+
+			<div class="">
+				<button onclick="displayRawData()" type="button" name="button">Export Raw Data</button>
+			</div>
+
+			<div class="">
+				<button onclick="deleteAllData()" type="button" name="button">Delete DB</button>
+			</div>
+		</div>
+
 		<h1>Football App</h1>
-		<p>
+		<p class="intro-para">
 			Stores players, generates evenly matched random teams based on player skill level, and stores player league stats to determine a winning player at the end of the season. Data is stored in localStorage on the device and can be exported as raw JSON. <br /><br />
 			Beta v0.1.
 		</p>
 
+
+
 		<div class="new-player">
-			<button onclick="displayRawData()" type="button" name="button">Export Raw Data</button>
-		</div>
-		<div class="new-player">
-			<button type="button" name="button">New Player</button>
+			<button onclick="toggleNewPlayer()" type="button" name="button">New Player</button>
+			<div class="new-player-form hidden">
+				<form id="new-player" action="">
+  					First name: <input type="text" name="fname" value="Donald"><br>
+					Last name: <input type="text" name="lname" value="Duck"><br>
+					Email: <input type="text" name="email" value="donald@disney.com"><br>
+					Skill Level: <input type="text" name="skill" value="Enter a number 1-3"><br>
+					<button onclick="newPlayerForm()" type="button" name="button">Submit</button>
+				</form>
+			</div>
 		</div>
 		<div class="select-players">
-			<button type="button" name="button">Select Players</button>
+			<button onclick="displayAvailablePlayers()" type="button" name="button">Select Players for Game</button>
+			<div class="list-players">
+				<form id="select-players" class="">
+					<ul></ul>
+				</form>
+			</div>
 		</div>
 		<div class="generate-teams">
 			<button onclick="generateTeams(footballData.players)" type="button" name="button">Generate Teams</button>
@@ -82,5 +117,8 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="app.js"></script>
+
+
+
 	</body>
 </html>
