--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="dev-tools">
 			<p>
-				Developer Tools
+				Developer Tools: This section will be hidden in the production app.
 			</p>
 
 			<div class="gen-test-data hidden">
@@ -31,20 +31,28 @@
 
 		<h1>Football App</h1>
 		<p class="intro-para">
-			Stores players, generates evenly matched random teams based on player skill level, and stores player league stats to determine a winning player at the end of the season. Data is stored in localStorage on the device and can be exported as raw JSON. <br /><br />
+			Generates two evenly matched random teams.<br>
+			Teams are evenly matched using each players' assigned skill rating.<br>
+			Stores game stats, including game date, teams, players, winning score, goal scorers.<br>
+			Stores players and their cumulative stats: total goals scored across the season and individual winning points (3 points for a win, 2 for a draw, 1 point for playing). <br>
+			Reports by player league score and total goals to determine a season winner. <br>
+			Players can be charged a nominal fee for lateness to games, which is recorded until paid up.<br>
+			Data is stored in localStorage on the device and can be exported as raw JSON. <br /><br />
 			Beta v0.1.
 		</p>
 
-
-
 		<div class="new-player">
 			<button onclick="toggleNewPlayer()" type="button" name="button">New Player</button>
+
 			<div class="new-player-form hidden">
+				<p>
+					All fields are required:
+				</p>
 				<form id="new-player" action="">
-  					First name: <input type="text" name="fname" value="Donald"><br>
-					Last name: <input type="text" name="lname" value="Duck"><br>
-					Email: <input type="text" name="email" value="donald@disney.com"><br>
-					Skill level (1-3): <input type="text" name="skill" value="2"><br>
+  					<input type="text" name="fname" value="First Name"><br>
+					<input type="text" name="lname" value="Last Name"><br>
+					<input type="text" name="email" value="Email"><br>
+					<input type="text" name="skill" value="Skill level (1-3)"><br>
 					<button onclick="newPlayerForm()" type="button" name="button">Submit</button>
 				</form>
 			</div>
