--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			Reports by player league score and total goals to determine a season winner. <br>
 			Players can be charged a nominal fee for lateness to games, which is recorded until paid up.<br>
 			Data is stored in localStorage on the device and can be exported as raw JSON. <br /><br />
-			Beta v0.1.
+			Alpha v0.1.
 		</p>
 
 		<div class="new-player">
