Add notes and todos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				Developer Tools: This section will be hidden in the production app.
 			</p>
 
-			<div class="gen-test-data hidden">
+			<div class="gen-test-data">
 				<button onclick="genTestData()" type="button" name="button">Generate Test Players</button>
 			</div>
 
