--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			</h6>
 
 			<div class="">
-				<button class="btn btn-default btn-lg btn-block btn-huge gen-test-data" onclick="genTestData()" type="button" name="button">Generate Test Players</button>
-                <button class="btn btn-default btn-lg btn-block btn-huge" onclick="consoleLogDb()"type="button" name="button">console.log (database)</button>
+				<button class="btn btn-default btn-lg btn-block btn-huge gen-test-data" id="generate-test-players-button" type="button" name="button">Generate Test Players</button>
+                <button class="btn btn-default btn-lg btn-block btn-huge" id="consolelog-db-button"type="button" name="button">console.log (database)</button>
                 <button class="btn btn-default btn-lg btn-block btn-huge" onclick="displayRawData()" type="button" name="button">Export Raw Data</button>
                 <button class="btn btn-default btn-lg btn-block btn-huge" id="delete-db-button" type="button" name="button">Delete DB</button>
 			</div>
@@ -156,7 +156,7 @@
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-		<script src="./dist/bundle.js"></script>
+		<script src="./app.js"></script>
 
 
 
