--- a/index.html
+++ b/index.html
@@ -149,17 +149,12 @@
 			</div>
 	</div>
 
-
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="mustache.min.js"></script>
 
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-		<script src="./app.js"></script>
-
-
-
-
+		<script src="./dist/bundle.js"></script>
 	</body>
 </html>
