--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 		<!-- <link rel="stylesheet" href="styles.css" media="screen" title="no title"> -->
+		<link rel="icon" type="image/x-icon" href="./favicon.ico">
 	</head>
 	<body>
 		<div class="dev-tools">
