--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 		<!-- <link rel="stylesheet" href="styles.css" media="screen" title="no title"> -->
 		<!--<link rel="icon" type="image/x-icon" href="./favicon.ico">-->
+		<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 	</head>
 	<body>
 		<div class="dev-tools">
