--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 		<!-- <link rel="stylesheet" href="styles.css" media="screen" title="no title"> -->
 		<!--<link rel="icon" type="image/x-icon" href="./favicon.ico">-->
-		<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">		
 	</head>
 	<body>
 		<div class="dev-tools">
-			<h3>
-				Developer Tools: This section will be hidden in the production app.
-			</h3>
+			<p>
+				Developer Tools
+			</p>
 
 			<div class="">
 				<button class="btn btn-default btn-huge btn-huge gen-test-data" id="generate-test-players-button" type="button" name="button">Gen Test Players</button>
@@ -25,19 +25,17 @@
                 <button class="btn btn-default btn-huge" id="delete-db-button" type="button" name="button">Delete DB</button>
 			</div>
 		</div>
-
 		<div class="wrapper col-xs-12">
 			<h1>Football App</h1>
-			<p class="intro-para hidden">
-				Generates two evenly matched random teams: Select existing players or add players to the database first.<br>
-				Teams are evenly matched using each players' assigned skill rating.<br>
-				Game stats are recorded, including game date, teams, players, winning score, goal scorers.<br>
-				Cumulative stats are recorded for each player: total goals scored across the season and individual winning points (3 points for a win, 2 for a draw, 1 point for playing). <br>
-				Reports by player league score and total goals to determine a season winner. <br>
-				Players can be charged a nominal fee for lateness to games, which is recorded until paid up.<br>
-				Data is stored in localStorage on the device and can be exported as raw JSON. <br /><br />
-				Alpha v0.1.
-			</p>
+			<ul class="intro-para hidden">
+				<li>Add players and their skill levels to the app</li>
+				<li>App then selects two evenly matched random teams from players in attendance.</li>
+				<li>Game stats are recorded, including game date, teams, players, winning score, goal scorers.</li>
+				<li>Cumulative stats are recorded for each player: total goals scored across the season and individual winning points (3 points for a win, 2 for a draw, 1 point for playing). </li>
+				<li>Reports by player league score and total goals to determine a season winner.</li>
+				<li>Players can be charged a nominal fee for lateness to games, which is recorded until paid up.</li>
+				<li>Data is stored in localStorage on the device and can be exported as raw JSON. </li>
+			</ul>
 
 			<div class="">
 				<button id="new-player-button" class="btn btn-default btn-lg btn-block btn-huge" type="button" name="button">Store New Player</button>
